--- a/static/style.css
+++ b/static/style.css
@@ -144,6 +144,13 @@ a:visited {
     padding-left: 2em;
 }
 
+.xp_bar {
+    width: 2em;
+    height: 0.5em;
+    background-color: red;
+    display: block;
+}
+
 
 
 .stats {
