--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@ h1 {
 }
 
 .wrapper {
-    min-width: 20em;
+    min-width: 48em;
     background-color: rgb(139 21 163 / 40%);
     margin-top: 0.5em;
     margin-bottom: 1em;
@@ -80,7 +80,7 @@ a:visited {
     background-size: 400px;
     background-position-x: -3.5em;
     background-position-y: -6.3em;
-    max-width: 20em;
+    width: 20em;
 
     margin-left: 2em;
 
@@ -142,6 +142,8 @@ a:visited {
     border-bottom-right-radius: inherit;
     padding-right: 2em;
     padding-left: 2em;
+    min-width: 15em;
+    max-width: 17em;
 }
 
 .xp_bar {
