--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -55,9 +55,12 @@ Main menu
         <!-- <span class="sprites sprites-attack" onmouseenter="showThis(document.getElementsByClassName('skill_name'), arguments[0])"></span> -->
         <span class="sprites sprites-{{ skill.skill_name }}" onmouseover="showSkillInfoPopup()"
             onmouseleave="hideSkillInfoPopup()" onclick="showSkillInfo('{{ skill.skill_name }}')"></span>
-        <span class="xp_bar xp_bar_{{ skill.skill_name }}"></span>
-        <span class="left_level">Level:</span><span
-            class="{{ skill.skill_name }}_level right_level">{{ skill.level }}</span>
+        <span class="xp_bar_background">
+            <span class="xp_bar xp_bar_{{ skill.skill_name }}" experience="{{ skill.experience }}"
+                experienceleft="{{ skill.experience_left }}" currentlevelxp="{{ skill.current_level_xp }}"></span>
+        </span>
+        <span class="left_level">Level:</span>
+        <span class="{{ skill.skill_name }}_level right_level">{{ skill.level }}</span>
         <span class="left_experience">experience left:</span><span
             class="{{ skill.skill_name }}_experience right_experience">{{ skill.experience_left }}</span>
     </span>
@@ -75,8 +78,23 @@ Main menu
         <script>
             const skillInfo = document.querySelector('.skillInfo');
             const box = document.querySelector('.box');
+            const skills = ["agility", "attack", "defence", "fishing", "hitpoints", "prayer", "strength", "thieving"];
             let isSkillInfo = false;
             let timer = Date.now();
+
+            let length = skills.length;
+            console.log("TERVE");
+            for (let i = 0; i < length; i++) {
+                console.log("hei");
+                asd = document.querySelector('.xp_bar_' + skills[i]);
+                xp = asd.getAttribute('experience');
+                xpLeft = asd.getAttribute('experienceleft');
+                currentLevelXp = asd.getAttribute('currentlevelxp');
+                ratio = ((Number(xp) - Number(currentLevelXp)) / (Number(xp) + Number(xpLeft) - Number(currentLevelXp)));
+                console.log(ratio, xp, currentLevelXp, xpLeft);
+
+                asd.style.width = (ratio * 100 + 1) + '%';
+            };
 
             function showSkillInfoPopup() {
                 if (!isSkillInfo) {
