Change account creation message from red to green

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ Log in
 </form>
 
 {% if account_created %}
-    <p style="color:red;">Account successfully created!</p>
+    <p style="color:rgb(21, 255, 0);">Account successfully created!</p>
     {% else %}
         <br>
 {% endif %}
