Change naming from parkour to agility

--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -16,7 +16,7 @@ Main menu
         <option value="combat (aggressive)">Combat-> Strength</option>
         <option value="combat (defensive)">Combat-> Defence</option>
         <option value="fishing">Fishing</option>
-        <option value="parkour">Parkour</option>
+        <option value="parkour">Agility</option>
         <option value="pray">Pray</option>
         <option value="thieve">Thieve</option>
     </select>
